Math/StrictMath, java.lang público, biblioteca 985/985 y VM reflexiva